# UVtrainer

./: CMakeLists.txt  GUI_trainingFaceDetector.cpp  GUI_trainingFaceDetector.h  GuiConfigureDatabase.cpp  GuiConfigureDatabase.h  Información  README.md  drawTree.cpp  drawTree.h  guiCongfigureTraining.cpp  guiCongfigureTraining.h  guiRocAndResponse.cpp  guiRocAndResponse.h  includes.cpp  includes.h  labelBase.cpp  labelBase.h  main.cpp  training.cpp  training.h  viewCascade.cpp  viewCascade.h
